--- a/public/index.html
+++ b/public/index.html
@@ -57,17 +57,15 @@
                 <div class="row">
                     <div class="col-12 col-lg-4 text-left">
                         <div class="feature-text-box">
-                            <h2>Durable shell. <br/>Effortless glide.</h2>
+                            <h2>Light as a feather</h2>
                             <hr>
                             <p>
-                                Aerodynamic honeycomb design with smart 
-                                ergonomic construction enables the smooth 
-                                passage of airflow from hand-to-mouse during 
-                                gameplay; and creates an environment of 
-                                breathability for enhanced movement and 
-                                comfort during use, especially during periods 
-                                extended gameplay.
-                            </p>
+			    The lightest esports mouse ever, weighing in at <strong>45 grams</strong>. At present, this is the lightest mass produced electronic competition mouse available.
+				It is half the weight of ordinary gaming mice on the market. Lighter mice glide with less friction and signicantly reduce hand fatigue during prolonged sessions.
+				<br/>
+				<br/>
+				View the <Strong>AeroScan Pro</strong> weight in comparison to industry standard gaming mice below.
+			    </p>
                         </div>
                     </div>
                     <div class="col-12 col-lg-8 text-center">
