--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
 			</div>
 		</div>
 		<div class="section-wire">
-			<div class="container-fluid">
+			<div class="container-fluid container-wire">
 			<div class="row g-0">
 				<div class="col-12 col-lg-7">
 					<img src="/lib/img/wire.webp" class="section-wire-image">
