--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>AeroScan Pro - Lightest gaming mouse ever | TECHGEAR.PRO </title>
+	<meta name="description" content="High performance esports mouse featuring the Pixart PWM 3389 sensor,
+			   OMRON switches, light weight shell and physical polling rate toggle.
+			   This is the mouse for esports professionals.">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
@@ -17,7 +21,7 @@
                     <div class="col-6">
                         <p class="navbar-label">
                             <a href="/">
-                                <img src="/lib/img/logo.png" width="120px" class="navbar-image"/>
+                                <img src="/lib/img/logo.png" width="120px" class="navbar-image" alt="TechGear.Pro Logo"/>
                             </a>
                         </p>
                     </div>
@@ -46,7 +50,7 @@
                         <a href="/contact.php" class="btn-cta">Order Now: $59.99 AUD</a>
                         </div>
                         <div class="col-sm-12 text-center d-sm-none">
-                            <img src="/lib/img/hero2.webp" class="jumbo-hero-image"/>
+                            <img src="/lib/img/hero2.webp" class="jumbo-hero-image" alt="AeroScan Pro Gaming Mouse view from top."/>
                         </div>
                     </div>
                 </div>
@@ -70,7 +74,7 @@
                     </div>
                     <div class="col-12 col-lg-8 text-center">
                         <div class="feature-image-container">
-                            <img src="/lib/img/5.webp" width="100%" class="feature-image">
+                            <img src="/lib/img/5.webp" width="100%" class="feature-image" alt="AeroScan Pro Lightest gaming mouse ever.">
                         </div>
                     </div>
                 </div>
@@ -152,7 +156,7 @@
                         <div class="row">
                             <div class="col-12 col-lg-8 text-center">
                                 <div class="feature-image-container">
-                                    <img src="/lib/img/6.webp" width="100%" class="feature-image">
+                                    <img src="/lib/img/6.webp" width="100%" class="feature-image" alt="Best gaming mouse specifications.">
                                 </div>
                             </div>
                             <div class="col-12 col-lg-4 text-left">
@@ -184,7 +188,7 @@
 		</div>
 		<div class="section-wire">
 			<div class="container-fluid container-wire">
-			<div class="row g-0">
+			<div class="row no-gutters">
 				<div class="col-12 col-lg-7">
 					<img src="/lib/img/wire.webp" class="section-wire-image">
 				</div>
@@ -210,7 +214,7 @@
                             <div class="col-12 col-md-6 col-lg-3 text-center">
                                 <div class="games-image-box">
 
-                                    <img src="/lib/img/val.jpg" class="games-image"/>
+                                    <img src="/lib/img/val.jpg" class="games-image" alt="Valorant gaming mouse"/>
                                 </div>
                                 <br/>
                                 <p>
@@ -221,7 +225,7 @@
                             </div>
                             <div class="col-12 col-md-6 col-lg-3 text-center">
                                 <div class="games-image-box">
-                                    <img src="/lib/img/fort.jpg" class="games-image"/>
+                                    <img src="/lib/img/fort.jpg" class="games-image" alt="Fortnite gaming mouse"/>
                                 </div>
                                 <br/>
                                 <p>
@@ -232,7 +236,7 @@
                             </div>
                             <div class="col-12 col-md-6 col-lg-3 text-center">
                                 <div class="games-image-box">
-                                    <img src="/lib/img/league.webp" class="games-image"/>
+                                    <img src="/lib/img/league.webp" class="games-image" alt="League of Legends gaming mouse"/>
                                 </div>
                                 <br/>
                                 <p>
@@ -243,7 +247,7 @@
                             </div>
                             <div class="col-12 col-md-6 col-lg-3 text-center">
                                 <div class="games-image-box">
-                                    <img src="/lib/img/csgo3.jpg" class="games-image" />
+                                    <img src="/lib/img/csgo3.jpg" class="games-image" alt="CounteStrike: Global Offensive gaming mouse"/>
                                 </div>
                                 <br/>
                                 <p>
@@ -270,7 +274,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-4 text-center">
-                                <img src="/lib/img/logo.png" width="120px;"/>
+                                <img src="/lib/img/logo.png" width="120px;" alt="TechGear.Pro Logo"/>
                             </div>
                             <div class="col-sm-4 text-center">
                                 <a href="/">AeroScan Pro</a>
