--- a/public/success.html
+++ b/public/success.html
@@ -14,7 +14,7 @@
                     <div class="col-6">
                         <p class="navbar-label">
                             <a href="/">
-                                <img src="/lib/img/logo.svg" width="120px" class="navbar-image"/>
+                                <img src="/lib/img/logo.png" width="120px" class="navbar-image"/>
                             </a>
                         </p>
                     </div>
@@ -41,7 +41,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-4 text-center">
-                                <img src="/lib/img/logo.svg" width="120px;"/>
+                                <img src="/lib/img/logo.png" width="120px;"/>
                             </div>
                             <div class="col-sm-4 text-center">
                                 <a href="/">AeroScan Pro</a>
