--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,9 @@
                             </p>
                         <a href="/contact.php" class="btn-cta">Order Now: $59.99 AUD</a>
                         </div>
+                        <div class="col-sm-12 text-center d-sm-none">
+                            <img src="/lib/img/hero2.webp" class="jumbo-hero-image"/>
+                        </div>
                     </div>
                 </div>
             </div>
