--- a/public/success.html
+++ b/public/success.html
@@ -1,5 +1,10 @@
 <html>
 	<head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+       	<title>Success! Order has been placed. | TECHGEAR.PRO </title>
+    	<meta name="description" content="Message sent successfully.">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
@@ -24,11 +29,11 @@
                 </div>
             </div>
 		</div>
-		<div class="jumbotron jumbo-hero" style="border-bottom:0px;">
+		<div class="jumbotron jumbo-success">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12 text-center">
-                        <div class="panel-form" style="width:600px;margin:0 auto;">
+                    <div class="col-12 text-center">
+                        <div class="panel-form" style=";margin:0 auto;">
                             <h1>Success!</h1>
                             <p>Your order has been sent successfully. <br/>We will send you a payment link as soon as possible.</p>
                             <a href="/" class="btn-cta" style="background-color:green;">Return Home</a>
